# dspy_study

./: STUDY_001_Prompt_tuning.md  STUDY_003_architecture_workflow.md  STUDY_004_summary.md
test_dspy/: README_openai_compatible.md  fine_tuning_examples.py  minimal_prompt_optimization.py  openai_compatible_examples.py  pretty_print_prompts.py  prompt_optimization_examples.py  pyproject.toml  show_actual_prompts.py  show_prompts_clean.py  simple_openai_compatible_example.py  test001_dspy.ipynb
